--- a/pindex.css
+++ b/pindex.css
@@ -12,6 +12,7 @@ html {
                      {
                       background-color: #fff!important;
                      }
+
 .logo img 
             {
                 width: 60px;
@@ -34,7 +35,7 @@ html {
               height: 100vh;
               background-size:100% 100% ;
               background-image: url('Pimages/11111.jpg');
-              clip-path:polygon(100% 0,100% 100%,95% 90%,90% 100%,85% 90%,80% 100%,75% 90%,70% 100%,65% 90%,60% 100%,55% 90%,50% 100%,45% 90%,40% 100%,35% 90%,30% 100%,25% 90%,20% 100%,15% 90%,10% 100%,5% 90%,0 100%,0 0);
+              clip-path:polygon(100% 0,100% 100%,50% 70%,0 100%,0 0);
               background-repeat:no-repeat ;
               position: relative;
              filter: contrast(111%);
